force-app/main/default/objects/Contact_Email__c/Contact_Email__c.object-meta.xml
<CustomObject>
    <description>Stores purpose-specific email identities for a Contact without creating duplicate Contact records.</description>
    <label>Contact Email</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Contact Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>