force-app/main/default/objects/Contact_Email__c/fields/Contact_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Key__c</fullName>
    <description>Contact ID plus normalized email. Prevents duplicate identities for one Contact.</description>
    <externalId>true</externalId>
    <label>Contact Email Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>