force-app/main/default/objects/Contact_Email__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary for Purpose</label>
    <type>Checkbox</type>
</CustomField>