force-app/main/default/objects/Contact_Email__c/fields/Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified__c</fullName>
    <label>Last Verified</label>
    <type>Date</type>
</CustomField>