force-app/main/default/objects/Contact_Email__c/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <description>Contact ID plus normalized address. Prevents the same address from being stored twice for one Contact.</description>
    <externalId>true</externalId>
    <label>Match Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>