force-app/main/default/objects/Contact_Email__c/fields/Normalized_Email__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email__c</fullName>
    <description>Lower-cased, trimmed email used for deterministic matching.</description>
    <externalId>true</externalId>
    <label>Normalized Email</label>
    <length>254</length>
    <type>Text</type>
</CustomField>