force-app/main/default/objects/Contact_Email__c/fields/Normalized_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email_Key__c</fullName>
    <description>Lower-cased, trimmed email used for deterministic matching. This is the v1 routing key.</description>
    <externalId>true</externalId>
    <label>Normalized Email Key</label>
    <length>254</length>
    <type>Text</type>
</CustomField>