force-app/main/default/objects/Contact_Email__c/fields/Primary_Scope_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Scope_Key__c</fullName>
    <description>Contact ID plus purpose key. Populated only for active primary identities; unique database constraint is the final concurrency guard.</description>
    <externalId>true</externalId>
    <label>Primary Scope Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>