force-app/main/default/objects/Contact_Email__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>General</fullName><default>true</default><label>General</label></value>
            <value><fullName>Work</fullName><default>false</default><label>Work</label></value>
            <value><fullName>Personal</fullName><default>false</default><label>Personal</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
            <value><fullName>Support</fullName><default>false</default><label>Support</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>