force-app/main/default/objects/Contact_Email__c/fields/Purpose_Key__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Key__c</fullName>
    <description>Stable purpose key resolved through Contact Email Purpose custom metadata.</description>
    <label>Purpose Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>