force-app/main/default/objects/Contact_Email__c/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <label>Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AdminAttestation</fullName><default>true</default><label>Administrator attestation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>