force-app/main/default/objects/Contact_Email__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <defaultValue>&quot;Unverified&quot;</defaultValue>
    <description>Only the bounded attestation service may change this trust state.</description>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unverified</fullName><default>true</default><label>Unverified</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Revoked</fullName><default>false</default><label>Revoked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>