force-app/main/default/objects/Contact_Email__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>