force-app/main/default/objects/Contact_Email__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Contact Emails</relationshipLabel>
    <relationshipName>Verified_Contact_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>